[gd_scene load_steps=3 format=3 uid="uid://bmg65xy5c6ubo"]

[ext_resource type="Script" uid="uid://ux4byctytxd7" path="res://scenes/ui/high_scores_menu.gd" id="1_abcde"]
[ext_resource type="Theme" uid="uid://c3mk77g6ame25" path="res://themes/snake_ui_theme.tres" id="2_theme"]

[node name="HighScoresMenu" type="CenterContainer"]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_abcde")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
focus_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"TitleLabel"
text = "HIGH SCORES"
horizontal_alignment = 1

[node name="ScoresContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScoresContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ScoresList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScoresContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../ScoresContainer")
text = "Back to Menu"

[node name="ButtonHints" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonHints"]
layout_mode = 2
theme_type_variation = &"HintLabel"
text = "[A] Select   [B] Back"
horizontal_alignment = 1
